
    o   print.ts() was occasionally making rounding errors in the labels
	for multiple calendar time series.

    o   Rdconv was not handling nested \describe{} constructs when
	converting to HTML (PR#1257) and not fixing up mal-formed
	\item fields in \describe{} when converting to text (PR#1330).

    o   filled.contour() was not checking consistency of x, y, z.
	(PR#1432)


	**************************************************
	*						 *
	*	       1.4 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.4.1


BUG FIXES

    o	scan(multi.line = FALSE) now always gives an immediate error
	message if a line is incomplete. (As requested in PR#1210)

    o	read.table() is no longer very slow in processing comments:
	moved to C code and fewer lines checked.

    o	type.convert() could give stack imbalance warnings if used
	with as.is = TRUE.

    o	predict.mlm ignored newdata (PR#1226) and also offsets.

    o	demo(tkttest) was inadvertently changed in 1.4.0 so that it would
	evaluate the requested test, but not display the result.

    o	stars(scale = TRUE) (the default) now works as documented (and
	as S does).  Previously it only scaled the maximum to 1. (PR#1230)

    o	d0 <- data.frame(a = 0); data.matrix(d0[0, 0]) and
	data.matrix(d0[, 0]) now work.

    o	plot(multiple time series, plot.type = "single") was computing
	`ylim' from the first series only.

    o	plot.acf() has a new `xpd = par("xpd")' argument which by default
	*does* clipping (of the horizontal lines) as desired (xpd = NA was
	used before, erronously in most cases).

    o	predict(smooth.spline(.), deriv = 1) now works.

    o	identify() failed when x is a structure/matrix. (PR#1238)

    o	getMethod() returns NULL when optional=TRUE as promised in the
	documentation.

    o	setMethod() allows "..." to be one of the arguments omitted in
	the method definition (but so far no check for ... being missing)
